fix: word wrap and modal

--- a/src/styles/components/AnswerItem.module.scss
+++ b/src/styles/components/AnswerItem.module.scss
@@ -1,5 +1,6 @@
 .answerItem {
   margin-top: 5px;
+  word-wrap: break-word;
 
   .answerInput {
     margin-left: 0;
