--- a/src/styles/components/QuestionItem.module.scss
+++ b/src/styles/components/QuestionItem.module.scss
@@ -3,4 +3,8 @@
   padding: 10px;
   border-radius: 8px;
   margin-top: 10px;
+
+  > h3 {
+    word-wrap: break-word;
+  }
 }
